Add RetriedProvisioner to allow retry provisioners (#9061)

--- a/website/pages/partials/provisioners/common-config.mdx
+++ b/website/pages/partials/provisioners/common-config.mdx
@@ -2,6 +2,8 @@ Parameters common to all provisioners:
 
 - `pause_before` (duration) - Sleep for duration before execution.
 
+- `max_retries` (int) - Max times the provisioner will retry in case of failure. Defaults to zero (0). Zero means an error will not be retried.
+
 - `only` (array of string) - Only run the provisioner for listed builder(s)
   by name.
 
