Add note to unmaintained provisioners (#10283)

--- a/website/pages/docs/provisioners/puppet-masterless.mdx
+++ b/website/pages/docs/provisioners/puppet-masterless.mdx
@@ -18,6 +18,8 @@ sidebar_title: Puppet Masterless
 
 # Puppet (Masterless) Provisioner
 
+@include 'provisioners/unmaintained-plugin.mdx'
+
 Type: `puppet-masterless`
 
 The masterless Puppet Packer provisioner configures Puppet to run on the
