--- a/website/pages/docs/provisioners/puppet-server.mdx
+++ b/website/pages/docs/provisioners/puppet-server.mdx
@@ -9,6 +9,8 @@ sidebar_title: Puppet Server
 
 # Puppet Server Provisioner
 
+@include 'provisioners/unmaintained-plugin.mdx'
+
 Type: `puppet-server`
 
 The `puppet-server` Packer provisioner provisions Packer machines with Puppet
