Fix broken links detected by link checker
- Fix broken example links
- Fix broken provisioner links
- Ignore linode.com because of DDOS protection settings

--- a/website/content/docs/provisioners/puppet-server.mdx
+++ b/website/content/docs/provisioners/puppet-server.mdx
@@ -84,7 +84,7 @@ listed below:
   ```
 
 * `facter` (object of key/value strings) - Additional
-  [facts](https://puppetlabs.com/facter) to make available to the Puppet run.
+  [facts](https://puppet.com/docs/puppet/latest/facter.html) to make available to the Puppet run.
 
 * `guest_os_type` (string) - The remote host's OS type ('windows' or 'unix')
   to tailor command-line and path separators. (default: unix).
