--- a/website/content/docs/provisioners/puppet-server.mdx
+++ b/website/content/docs/provisioners/puppet-server.mdx
@@ -52,7 +52,7 @@ listed below:
   nothing, in which case a client private key won't be uploaded.
 
 - `execute_command` (string) - The command-line to execute Puppet. This is a
-  [template engine](/docs/templates/engine). Therefore, you
+  [template engine](/docs/templates/legacy_json_templates/engine). Therefore, you
   may use user variables and template functions in this field. In addition,
   you may use the following extra variables:
   - ClientCertPath: The value set in the template option
@@ -120,7 +120,7 @@ listed below:
 * `elevated_user` and `elevated_password` (string) - If specified, Puppet
   will be run with elevated privileges using the given Windows user. See the
   [powershell](/docs/provisioners/powershell) provisioner for the full
-  details. This is a [template engine](/docs/templates/engine).
+  details. This is a [template engine](/docs/templates/legacy_json_templates/engine).
   Therefore, you may use user variables and template functions in this
   field, including `` {{ build `Password`}} `` to use the password being used
   by the communicator to connect to your instance.
