Clean up and add multi-component configuration

--- a/docs/provisioners/puppet-masterless.mdx
+++ b/docs/provisioners/puppet-masterless.mdx
@@ -1,17 +1,8 @@
 ---
 description: >
-  The masterless Puppet Packer provisioner configures Puppet to run on the
-
-  machines by Packer from local modules and manifest files. Modules and
-  manifests
-
-  can be uploaded from your local machine to the remote machine or can simply
-  use
-
-  remote paths. Puppet is run in masterless mode, meaning it never communicates
-
-  to a Puppet master.
+  The masterless Puppet Packer provisioner configures Puppet to run on the machines by Packer from local modules and manifest files. Modules and manifests can be uploaded from your local machine to the remote machine or can simply use remote paths. Puppet is run in masterless mode, meaning it never communicates to a Puppet master.
 page_title: Puppet Masterless - Provisioners
+nav_title: Puppet Masterless
 ---
 
 # Puppet (Masterless) Provisioner
