--- a/docs/provisioners/puppet-server.mdx
+++ b/docs/provisioners/puppet-server.mdx
@@ -3,6 +3,7 @@ description: |
   The puppet-server Packer provisioner provisions Packer machines with Puppet by
   connecting to a Puppet master.
 page_title: Puppet Server - Provisioners
+nav_title: Puppet Server
 ---
 
 # Puppet Server Provisioner
